# lapsgroup

./: .gitignore  BRAND_STRATEGY.md  LAPS_Architecture_Executive_Summary.md  LAPS_Architecture_Launch_Plan.md  LAPS_Architecture_Launch_Presentation_Transcript.md  LAPS_LOGO_DOCUMENTATION.md  LAUNCH_ASSETS_README.md  LOGO_GUIDELINES.md  PRESENTATION_EXPORT_GUIDE.md  PRESENTATION_UPDATE_SUMMARY.md  README.md  docker-compose.yml  social-media-story-old.html  social-media-story.html
backend/: .env.example  Dockerfile  init_db.py  main.py  pyproject.toml  test_templates.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: __init__.py  ai.py  contact.py  divisions.py  jobs.py  news.py  newsletter.py  projects.py  public.py
backend/app/core/: __init__.py  config.py  database.py  email.py  security.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/template_previews/: contact_confirmation.html  contact_notification.html  job_application_confirmation.html  meeting_confirmation.html  newsletter_welcome.html  quote_request_confirmation.html
backend/templates/: base.html  contact_confirmation.html  contact_notification.html  job_application_confirmation.html  meeting_confirmation.html  newsletter_welcome.html  quote_request_confirmation.html
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: IDCard.tsx
frontend/src/config/: api.ts
frontend/src/data/: content.ts
(+35 files in other folders)
